fixed gaps between contents

--- a/src/components/autopark/AutoparkDetailsComponent.module.css
+++ b/src/components/autopark/AutoparkDetailsComponent.module.css
@@ -61,13 +61,13 @@
   .autoparkRow {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 20px;
+    gap: 15px;
   }
 
   .autoparkCol {
     width: 100%;
     margin: 10px 0;
+    padding: 20px;
   }
 
   .autoparkIcon {
